dump/src/reader/snapshots/dump__reader__test__import_dump_v4-6.snap
---
source: dump/src/reader/mod.rs
expression: products.settings()
---
Ok(
    Settings {
        displayed_attributes: Reset,
        searchable_attributes: Reset,
        filterable_attributes: Set(
            {},
        ),
        sortable_attributes: Set(
            {},
        ),
        ranking_rules: Set(
            [
                "words",
                "typo",
                "proximity",
                "attribute",
                "sort",
                "exactness",
            ],
        ),
        stop_words: Set(
            {},
        ),
        synonyms: Set(
            {
                "android": [
                    "phone",
                    "smartphone",
                ],
                "iphone": [
                    "phone",
                    "smartphone",
                ],
                "phone": [
                    "android",
                    "iphone",
                    "smartphone",
                ],
            },
        ),
        distinct_attribute: Reset,
        typo_tolerance: Set(
            TypoSettings {
                enabled: Set(
                    true,
                ),
                min_word_size_for_typos: Set(
                    MinWordSizeTyposSetting {
                        one_typo: Set(
                            5,
                        ),
                        two_typos: Set(
                            9,
                        ),
                    },
                ),
                disable_on_words: Set(
                    {},
                ),
                disable_on_attributes: Set(
                    {},
                ),
            },
        ),
        faceting: NotSet,
        pagination: NotSet,
        _kind: PhantomData<index::updates::Checked>,
    },
)
