dump/src/reader/snapshots/dump__reader__test__import_dump_v5-4.snap
---
source: dump/src/reader/mod.rs
expression: keys
---
[
  {
    "description": "Use it to search from the frontend",
    "name": "Default Search API Key",
    "uid": "192e54ae-32f8-4c61-85f5-eb2b1b255629",
    "actions": [
      "search"
    ],
    "indexes": [
      "*"
    ],
    "expires_at": null,
    "created_at": "2022-10-04T15:51:29.254137561Z",
    "updated_at": "2022-10-04T15:51:29.254137561Z"
  },
  {
    "description": "Use it for anything that is not a search operation. Caution! Do not expose it on a public frontend",
    "name": "Default Admin API Key",
    "uid": "292cd892-be06-452f-a90b-ef28dfc94077",
    "actions": [
      "*"
    ],
    "indexes": [
      "*"
    ],
    "expires_at": null,
    "created_at": "2022-10-04T15:51:29.243913218Z",
    "updated_at": "2022-10-04T15:51:29.243913218Z"
  }
]
